# scrapy-selenium

./: README.md  pyproject.toml  setup.cfg  setup.py
scrapy_selenium/: middlewares.py
scrapy_selenium_customdriverinstance/: middlewares.py
