[metadata]
name = scrapy-selenium-multisession
version = 0.0.1
url = https://github.com/Lucioric2000/scrapy-selenium-customdriverinstance
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium allowing the user to provide the Selenium driver instance to use in each request
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
